EPBDS-14165 Migrate to AWS SDK 2.x